{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 1,
  "lineage": "3722f1f1-f438-3c62-949a-4e76a8766b91",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dev-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/networkSecurityGroups/vnet-srtest-aks-hub-devSubnet-nsg",
            "location": "eastus",
            "name": "vnet-srtest-aks-hub-devSubnet-nsg",
            "resource_group_name": "srtest-aks-hub-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "174.6.97.29",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dev",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/publicIPAddresses/vnet-srtest-aks-hub-firewall-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.152.11",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vnet-srtest-aks-hub-firewall-pip",
            "resource_group_name": "srtest-aks-hub-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-srtest-aks-hub/subnets/devSubnet",
            "name": "devSubnet",
            "resource_group_name": "srtest-aks-hub-rg",
            "virtual_network_name": "vnet-srtest-aks-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-srtest-aks-hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "srtest-aks-hub-rg",
            "virtual_network_name": "vnet-srtest-aks-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-srtest-aks-hub/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "srtest-aks-hub-rg",
            "virtual_network_name": "vnet-srtest-aks-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-srtest-aks-hub/subnets/devSubnet",
            "network_security_group_id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/networkSecurityGroups/vnet-srtest-aks-hub-devSubnet-nsg",
            "subnet_id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-srtest-aks-hub/subnets/devSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.dev-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dev",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f4a471b7-3ed6-4d29-b6b6-596d27d25953",
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-srtest-aks-hub",
            "location": "eastus",
            "name": "vnet-srtest-aks-hub",
            "resource_group_name": "srtest-aks-hub-rg",
            "tags": {
              "project": "cs-aks"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastionhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/publicIPAddresses/vnet-srtest-aks-hub-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.152.19",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vnet-srtest-aks-hub-bastion-pip",
            "resource_group_name": "srtest-aks-hub-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-srtest-aks-hub/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "srtest-aks-hub-rg",
            "virtual_network_name": "vnet-srtest-aks-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.create_linuxsserver",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg-dev/providers/Microsoft.Network/networkInterfaces/server-dev-linux-nic",
            "internal_domain_name_suffix": "w3y0j3gwhyuu1nvwlfwspuszkd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg-dev/providers/Microsoft.Network/publicIPAddresses/dev-pip",
                "subnet_id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-srtest-aks-hub/subnets/devSubnet"
              }
            ],
            "location": "eastus",
            "name": "server-dev-linux-nic",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "srtest-aks-hub-rg-dev",
            "tags": {
              "application": "compute"
            }
          },
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dev",
            "azurerm_virtual_network.vnet",
            "module.create_linuxsserver.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.create_linuxsserver",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg-dev/providers/Microsoft.Network/publicIPAddresses/dev-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.215.193",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-pip",
            "resource_group_name": "srtest-aks-hub-rg-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules_aks",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "firewalls": [],
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/firewallPolicies/AKSpolicy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "eastus",
            "name": "AKSpolicy",
            "private_ip_ranges": null,
            "resource_group_name": "srtest-aks-hub-rg",
            "rule_collection_groups": [],
            "sku": "Standard",
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules_aks",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "AKS",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "aks_app_rules",
                "priority": 205,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": null,
                    "destination_fqdn_tags": [
                      "AzureKubnernetesService"
                    ],
                    "destination_fqdns": null,
                    "destination_urls": null,
                    "name": "aks_service",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null,
                    "terminate_tls": false,
                    "web_categories": null
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/firewallPolicies/AKSpolicy",
            "id": "/subscriptions/0f629d89-46bc-474b-941a-c7140441a426/resourceGroups/srtest-aks-hub-rg/providers/Microsoft.Network/firewallPolicies/AKSpolicy/ruleCollectionGroups/aks-rcg",
            "name": "aks-rcg",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "aks_network_rules",
                "priority": 201,
                "rule": [
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "443"
                    ],
                    "name": "https",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "53"
                    ],
                    "name": "dns",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "123"
                    ],
                    "name": "time",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "1194"
                    ],
                    "name": "tunnel_udp",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "9000"
                    ],
                    "name": "tunnel_tcp",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  }
                ]
              }
            ],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.firewall_rules_aks.azurerm_firewall_policy.aks"
          ]
        }
      ]
    }
  ]
}